--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Meanderings Mapped</title>
-  </head>
+    <link rel="icon" type="image/jpg" href="http://i.imgur.com/erhQBpat.jpg"/>
+      <link rel="stylesheet" href="/style.css" media="screen" title="no title" charset="utf-8">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    </head>
   <body>
-    <header>
-      <h1>Meanderings Mapped</h1>
-        <h3>A travel tracking and journaling application</h3>
-    </header>
 
     <%= yield %>
 
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js'></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="/app.js"></script>
   </body>
 </html>
