saving front end work

--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,23 @@
-<header>
-  <h1>Meanderings Mapped</h1>
-    <h3>A travel tracking and journaling application</h3>
-</header>
+  <br>
+  <br>
+<form>
+  <div class="container">
+    <div class="row" width=50%>
+      <div class="col-md-6">
+        <label for="user_email">Email address</label>
+        <input type="email" class="form-control" id="user_email" placeholder="Email">
+      </div>
+    </div>
+      <br>
+      <br>
+    <div class="row" width=50%>
+      <div class="col-md-6">
+        <label for="user_password">Password</label>
+        <input type="password" class="form-control" id="user_password" placeholder="Password">
+      </div>
+    </div>
+      <br>
+      <br>
+    <button id="user_login" type="submit" class="btn btn-default">Submit</button>
+  </div>
+</form>
