--- a/views/login.erb
+++ b/views/login.erb
@@ -1,11 +1,11 @@
   <br>
   <br>
-<form>
+<form class="form-login" action"/user/login" method="post">
   <div class="container">
     <div class="row" width=50%>
       <div class="col-md-6">
         <label for="user_email">Email address</label>
-        <input type="email" class="form-control" id="user_email" placeholder="Email">
+        <input type="email" name="user_email" class="form-control" id="user_email" placeholder="Email">
       </div>
     </div>
       <br>
@@ -13,7 +13,7 @@
     <div class="row" width=50%>
       <div class="col-md-6">
         <label for="user_password">Password</label>
-        <input type="password" class="form-control" id="user_password" placeholder="Password">
+        <input type="password" name="password" class="form-control" id="user_password" placeholder="Password">
       </div>
     </div>
       <br>
