--- a/views/login.erb
+++ b/views/login.erb
@@ -1,23 +1,73 @@
   <br>
   <br>
-<form class="form-login" action"/user/login" method="post">
-  <div class="container">
+
+<div class="container">
+
+
+<ul class="nav nav-tabs">
+  <li class = "active"><a data-toggle="tab" href="#login">Login</a></li>
+  <li><a data-toggle="tab" href="#register">Register</a></li>
+</ul>
+
+<div class="tab-content">
+
+  <div id="login" class="tab-pane fade in active">
+
+      <form class="form-login" action"/login" method="post">
+  <!-- <div class="container"> -->
+        <div class="row" width=50%>
+          <div class="col-md-6">
+            <label for="user_name">Username</label>
+            <input type="text" name="user_name" class="form-control" id="user_email" placeholder="Username">
+          </div>
+        </div>
+  <br>
+  <br>
+    <div class="row" width=50%>
+      <div class="col-md-6">
+        <label for="user_password">Password</label>
+        <input type="password" name="password" class="form-control" id="user_password" placeholder="Password" required>
+      </div>
+    </div>
+  <br>
+  <br>
+    <button id="user_login" type="submit" class="btn btn-default">Submit</button>
+  <!-- </div> -->
+    </form>
+</div>
+
+
+  <div id="register" class="tab-pane fade">
+  <form class="form-login" action"/register" method="post">
+<!-- <div class="container"> -->
+    <div class="row" width=50%>
+      <div class="col-md-6">
+        <label for="user_name">Username</label>
+        <input type="text" name="user_name" class="form-control" id="user_name" placeholder="Username">
+      </div>
+    </div>
+<br>
+<br>
     <div class="row" width=50%>
       <div class="col-md-6">
         <label for="user_email">Email address</label>
         <input type="email" name="user_email" class="form-control" id="user_email" placeholder="Email">
       </div>
     </div>
-      <br>
-      <br>
-    <div class="row" width=50%>
-      <div class="col-md-6">
-        <label for="user_password">Password</label>
-        <input type="password" name="password" class="form-control" id="user_password" placeholder="Password">
-      </div>
-    </div>
-      <br>
-      <br>
-    <button id="user_login" type="submit" class="btn btn-default">Submit</button>
+
+<br>
+<br>
+
+<div class="row" width=50%>
+  <div class="col-md-6">
+    <label for="user_password">Password</label>
+    <input type="password" name="password" class="form-control" id="user_password" placeholder="Password">
   </div>
+</div>
+<br>
+<br>
+<button id="user_login" type="submit" class="btn btn-default">Submit</button>
+<!-- </div> -->
 </form>
+</div>
+</div>
