fixing broken things

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -9,31 +9,29 @@
     <!-- Table -->
     <table class="table">
       <tbody>
-        <% @users.each do |user| %>
         <tr>
           <td>Name</td>
           <td>
-            <%= user.profile_name %>
+            TBD
           </td>
         </tr>
       <tr>
         <td>Age</td>
         <td>
-          <%= user.date_of_birth %>
+          TBD
         </td>
       </tr>
       <tr>
         <td>City</td>
         <td>
-          <%= user.city %>
+          TBD
         </td>
       </tr>
       <tr>
         <td>Age</td>
         <td>
-          <%= user.bio %>
+          TBD
         </td>
       </tr>
-    <% end %>
   </table>
 </div>
