saving minor updates

--- a/views/profile_create.erb
+++ b/views/profile_create.erb
@@ -1,7 +1,7 @@
 <br>
 <br>
 
-  <form class="form-horizontal" action="/profile" method="post">
+  <form class="form-horizontal" action="/profile/create" method="post">
     <div class="form-group">
       <label for="register_name" class="col-sm-1 control-label">Name</label>
       <div class="col-sm-3">
