working on database

--- a/views/profile.erb
+++ b/views/profile.erb
@@ -12,7 +12,7 @@
         <tr>
           <td>Name</td>
           <td>
-            TBD
+            <% = profile_name %>
           </td>
         </tr>
       <tr>
@@ -28,7 +28,7 @@
         </td>
       </tr>
       <tr>
-        <td>Age</td>
+        <td>Bio</td>
         <td>
           TBD
         </td>
