--- a/views/create_entry.erb
+++ b/views/create_entry.erb
@@ -1,7 +1,8 @@
 <br>
 <br>
 
-  <form class="form-horizontal">
+  <form id="entry_form" class="form-horizontal">
+    <div id="the_div"></div>
     <div class="form-group">
       <label for="entry_title" class="col-sm-1 control-label">Title</label>
       <div class="col-sm-3">
@@ -28,7 +29,7 @@
       </div>
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Publish!</button>
+          <button type="submit" id="entry_submit" class="btn btn-default">Publish!</button>
         </div>
       </div>
     </form>
