--- a/views/create_entry.erb
+++ b/views/create_entry.erb
@@ -1,30 +1,31 @@
 <br>
 <br>
 
-  <form id="entry_form" class="form-horizontal">
+  <!-- <form id="entry_form" action"/entry/create_entry" method="post" class="form-horizontal"> -->
+    <form id="entry_form" class="form-horizontal">
     <div id="the_div"></div>
     <div class="form-group">
       <label for="entry_title" class="col-sm-1 control-label">Title</label>
       <div class="col-sm-3">
-        <input type="text" class="form-control" name="title" id="register_name" placeholder="Title Your Entry!"></input>
+        <input type="text" class="form-control" name="title" id="title" placeholder="Title Your Entry!"></input>
       </div>
     </div>
     <div class="form-group">
       <label for="entry_place" class="col-sm-1 control-label">Place</label>
       <div class="col-sm-3">
-        <input id="autocomplete" name="place_id" placeholder="Start Typing a Location" class="form-control" type="text"></input>
+        <input id="autocomplete" placeholder="Start Typing a Location" class="form-control" type="text"></input>
       </div>
     </div>
     <div class="form-group">
       <label for="entry_date" class="col-sm-1 control-label">Date Visited</label>
       <div class="col-sm-3">
-        <input type="date" class="form-control" id="datepicker" placeholder="Date"></input>
+        <input type="date" class="form-control" name="entry_date" id="entry_date" placeholder="Date"></input>
       </div>
     </div>
     <div class="form-group">
       <label for="journal_entry" class="col-sm-1 control-label">Thoughts</label>
         <div class="col-sm-3">
-          <textarea class="form-control" name="journal_snippet" rows="6" placeholder="Type Your Journal Entry Here!"></textarea>
+          <textarea class="form-control" name="journal_snippet" id="journal_snippet" rows="6" placeholder="Type Your Journal Entry Here!"></textarea>
         </div>
       </div>
       <div class="form-group">
