--- a/views/layout.erb
+++ b/views/layout.erb
@@ -45,7 +45,7 @@
                   <li><a href="#">FAQ's</a></li>
                   <li><a href="#">Contact Us</a></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">Logout</a></li>
+                  <li><a href="/logout">Logout</a></li>
                 </ul>
               </li>
             </ul>
