--- a/views/login.erb
+++ b/views/login.erb
@@ -38,7 +38,7 @@
 
 
   <div id="register" class="tab-pane fade">
-  <form class="form-login" action"/register" method="post">
+  <form class="form-login" action"#register" method="post">
 <!-- <div class="container"> -->
     <div class="row" width=50%>
       <div class="col-md-6">
