--- a/views/profile.erb
+++ b/views/profile.erb
@@ -35,40 +35,4 @@
       </tr>
   </table>
 </div>
-
-
-<!-- <div class="panel panel-default">
-  Default panel contents -->
-    <!-- <div class="panel-heading">About</div>
-      <div class="panel-body" id="image_new">
-      </div> -->
-    <!-- Table -->
-    <!-- <table class="table">
-      <tbody>
-        <tr>
-          <td>Name</td>
-          <td>
-            TBD
-          </td>
-        </tr>
-      <tr>
-        <td>Age</td>
-        <td>
-          TBD
-        </td>
-      </tr>
-      <tr>
-        <td>City</td>
-        <td>
-          TBD
-        </td>
-      </tr>
-      <tr>
-        <td>Bio</td>
-        <td>
-          TBD
-        </td>
-      </tr>
-  </table>
-</div> -->
-<div id="map-canvas"></div>
+<div id="map-canvas" style="width: 300px; height: 300px"></div>
