--- a/views/login.erb
+++ b/views/login.erb
@@ -18,7 +18,7 @@
         <div class="row" width=50%>
           <div class="col-md-6">
             <label for="user_name">Username</label>
-            <input type="text" name="user_name" class="form-control" id="user_email" placeholder="Username">
+            <input type="text" name="user_name" class="form-control" placeholder="Username">
           </div>
         </div>
   <br>
@@ -26,7 +26,7 @@
     <div class="row" width=50%>
       <div class="col-md-6">
         <label for="user_password">Password</label>
-        <input type="password" name="password" class="form-control" id="user_password" placeholder="Password" required>
+        <input type="password" name="password" class="form-control" placeholder="Password" required>
       </div>
     </div>
   <br>
