--- a/views/profile.erb
+++ b/views/profile.erb
@@ -1,4 +1,4 @@
-<h1>Profile Page</h1>
+<h1 id="profile_head">Profile Page</h1>
 
 <div class="panel panel-default">
   <!-- Default panel contents -->
