--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 body {
-  padding-top: 70px; }
+  padding-top: 70px;
+  background: #74caee !important; }
 
 #nav_bar {
   max-width: 98%;
@@ -10,6 +11,14 @@ img {
   height: 80px; }
 
 .panel.panel-default {
+  margin: 50px;
   width: 30%; }
+
+#profile_head {
+  margin: 50px; }
+
+#meander {
+  margin-top: 140px;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
