--- a/views/profile_create.erb
+++ b/views/profile_create.erb
@@ -3,6 +3,7 @@
 
   <form class="form-horizontal" action="/profile/create" method="post">
     <div class="form-group">
+      <input type="hidden" name="user_id" value="<%= @user_id%>">
       <label for="register_name" class="col-sm-1 control-label">Name</label>
       <div class="col-sm-3">
         <input type="text" class="form-control" name="profile_name" placeholder="Name">
@@ -32,7 +33,7 @@
             <input type="file" name="image">
             <input type="hidden" name="image_as_base64">
             <!-- <input type="submit" value="Upload"> -->
-        <div id="images"></div>
+        <div id="profile_pic"></div>
       <p class="help-block">Select & upload profile picture</p>
     </div>
   </div>
