--- a/public/style.css
+++ b/public/style.css
@@ -6,9 +6,10 @@ body {
   max-width: 98%;
   max-height: 98%; }
 
-img {
-  width: 80px;
-  height: 80px; }
+#paris {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 40px; }
 
 .panel.panel-default {
   margin: 50px;
@@ -17,8 +18,12 @@ img {
 #profile_head {
   margin: 50px; }
 
+#profile_pic img {
+  max-width: 100%;
+  max-height: 100%; }
+
 #meander {
-  margin-top: 140px;
+  margin-top: 40px;
   text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
