--- a/public/style.scss
+++ b/public/style.scss
@@ -10,9 +10,10 @@ body {
   max-height: 98%;
 }
 
-img {
-  width: 80px;
-  height: 80px;
+#paris {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 40px;
 }
 
 .panel.panel-default {
@@ -24,7 +25,12 @@ img {
   margin: $margin-left;
 }
 
+#profile_pic img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 #meander {
-  margin-top: 140px;
+  margin-top: 40px;
   text-align: center;
 }
