--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,6 @@
 <div id="meander">
   <h1>Meanderings Mapped</h1>
+    <div>
+        <img id="paris" src="http://i.imgur.com/rKieAhe.png" alt="" />
+    </div>
 </div>
