--- a/public/style.css
+++ b/public/style.css
@@ -19,8 +19,8 @@ body {
   margin: 50px; }
 
 #profile_pic img {
-  max-width: 100%;
-  max-height: 100%; }
+  height: 80px;
+  width: 80px; }
 
 #meander {
   margin-top: 40px;
