all profile functionality is working -- just need to render image in profile

--- a/views/profile_create.erb
+++ b/views/profile_create.erb
@@ -31,7 +31,7 @@
           <label for="photoInputFile" class="col-sm-1 control-label">Image upload</label>
             <div class="col-sm-3">
             <input type="file" name="image">
-            <input type="hidden" name="image_as_base64">
+            <input type="hidden" name="image_as_base64" id="base">
             <!-- <input type="submit" value="Upload"> -->
         <div id="profile_pic"></div>
       <p class="help-block">Select & upload profile picture</p>
