--- a/views/profile.erb
+++ b/views/profile.erb
@@ -36,4 +36,40 @@
   </table>
 </div>
 <p> <%= @place_id %> </p>
-<div id="map-canvas" style="width: 300px; height: 300px"></div>
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+    <div class="panel-heading">About</div>
+      <div class="panel-body" id="image_new">
+        <p>Placeholder for profile image</p>
+        <!-- <div id="map-canvas" style="width: 200px; height: 150px"></div> -->
+      </div>
+    <!-- Table -->
+    <table class="table">
+      <tbody>
+        <tr>
+          <td>Name</td>
+          <td>
+            TBD
+          </td>
+        </tr>
+      <tr>
+        <td>Age</td>
+        <td>
+          <div id="map-canvas" style="width: 200px; height: 150px"></div>
+        </td>
+      </tr>
+      <tr>
+        <td>City</td>
+        <td>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Bio</td>
+        <td>
+          TBD
+        </td>
+      </tr>
+  </table>
+</div>
+<!-- <div id="map-canvas" style="width: 200px; height: 150px"></div> -->
