--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js'></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz0IVOUlwIaZdq5zsKUaNqkEBjdDCqqQc&libraries=places"></script>
     <script type="text/javascript" src="/app.js"></script>
+    <!-- <script type="text/javascript" src="/create_entry.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="icon" type="image/jpg" href="http://i.imgur.com/erhQBpat.jpg"/>
       <link rel="stylesheet" href="/style.css" media="screen" title="no title" charset="utf-8">
