--- a/public/style.css
+++ b/public/style.css
@@ -12,8 +12,12 @@ body {
   border-radius: 40px; }
 
 .panel.panel-default {
-  margin: 50px;
-  width: 30%; }
+  width: 100%;
+  border-radius: 15px; }
+
+.panel-heading {
+  border-radius: 15px;
+  background-color: yellow; }
 
 #profile_head {
   margin: 50px; }
@@ -37,5 +41,26 @@ body {
 #meander {
   margin-top: 40px;
   text-align: center; }
+
+#profile_about {
+  float: left;
+  width: 30%;
+  margin-left: 50px; }
+
+#profile_trips {
+  float: right;
+  width: 40%;
+  margin-right: 150px; }
+
+#entry_button {
+  margin-top: 30px;
+  margin-left: 150px; }
+
+tbody {
+  width: auto !important;
+  border-radius: 15px; }
+
+table {
+  border-radius: 15px; }
 
 /*# sourceMappingURL=style.css.map */
