--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,9 +11,35 @@
     <link rel="icon" type="image/jpg" href="http://i.imgur.com/erhQBpat.jpg"/>
       <link rel="stylesheet" href="/style.css" media="screen" title="no title" charset="utf-8">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+      <!-- <script>
+      function initializeGoogleMaps(element,thePlace){
+        var request = {
+          placeId: thePlace
+        };
+         console.log(thePlace);
+
+      function callback(place,status){
+          if (status == google.maps.places.PlacesServiceStatus.OK){
+              var marker = new google.maps.Marker({
+                 map: map,
+                 position: place.geometry.location
+            });
+            map.setCenter(marker.getPosition());
+          }
+        }
+
+      var map = new google.maps.Map(document.getElementById(element), {
+        zoom: 15
+      })
+
+        service = new google.maps.places.PlacesService(map);
+        service.getDetails(request, callback);
+      }
+      </script> -->
     </head>
+
   <body body-bg="background: rgb(116, 202, 238)">
+
     <%= yield %>
 
       <nav class="navbar navbar-inverse navbar-fixed-top">
